Fix gen_aidl to include all inputs in the rule key calculation.
Summary: Currently none of the source files below the importPath are used for rule key calculation even though the aidl compiler will use them to produce the final binary. This is incorrect and can lead to cache corruption.

Reviewed By: styurin

fbshipit-source-id: bed8fc8