@@ -17,11 +17,14 @@
 package com.facebook.buck.android;
 
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotEquals;
 
 import com.facebook.buck.android.toolchain.AndroidPlatformTarget;
 import com.facebook.buck.core.build.context.BuildContext;
 import com.facebook.buck.core.model.BuildTarget;
+import com.facebook.buck.core.rulekey.RuleKey;
 import com.facebook.buck.core.sourcepath.PathSourcePath;
+import com.facebook.buck.core.sourcepath.SourcePath;
 import com.facebook.buck.core.sourcepath.resolver.SourcePathResolver;
 import com.facebook.buck.core.sourcepath.resolver.impl.DefaultSourcePathResolver;
 import com.facebook.buck.io.BuildCellRelativePath;
@@ -36,6 +39,8 @@ import com.facebook.buck.rules.FakeSourcePath;
 import com.facebook.buck.rules.SourcePathRuleFinder;
 import com.facebook.buck.rules.TestBuildRuleParams;
 import com.facebook.buck.rules.TestBuildRuleResolver;
+import com.facebook.buck.rules.keys.DefaultRuleKeyFactory;
+import com.facebook.buck.rules.keys.TestDefaultRuleKeyFactory;
 import com.facebook.buck.shell.ShellStep;
 import com.facebook.buck.step.Step;
 import com.facebook.buck.step.TestExecutionContext;
@@ -43,29 +48,41 @@ import com.facebook.buck.step.fs.MkdirStep;
 import com.facebook.buck.step.fs.RmStep;
 import com.facebook.buck.testutil.FakeProjectFilesystem;
 import com.facebook.buck.toolchain.impl.ToolchainProviderBuilder;
+import com.facebook.buck.util.cache.FileHashCacheMode;
+import com.facebook.buck.util.cache.impl.StackedFileHashCache;
+import com.google.common.collect.ImmutableSortedSet;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Collections;
 import java.util.List;
+import org.junit.Before;
 import org.junit.Test;
 
 public class GenAidlTest {
 
-  @Test
-  public void testSimpleGenAidlRule() throws IOException {
-    ProjectFilesystem stubFilesystem = FakeProjectFilesystem.createJavaOnlyFilesystem();
+  private ProjectFilesystem stubFilesystem;
+  private PathSourcePath pathToAidl;
+  private BuildTarget target;
+  private DefaultSourcePathResolver pathResolver;
+  private String pathToAidlExecutable;
+  private String pathToFrameworkAidl;
+  private String importPath;
+  private AndroidPlatformTarget androidPlatformTarget;
+
+  @Before
+  public void setUp() throws IOException {
+    stubFilesystem = FakeProjectFilesystem.createJavaOnlyFilesystem();
     Files.createDirectories(stubFilesystem.getRootPath().resolve("java/com/example/base"));
 
-    PathSourcePath pathToAidl =
-        FakeSourcePath.of(stubFilesystem, "java/com/example/base/IWhateverService.aidl");
-    String importPath = Paths.get("java/com/example/base").toString();
+    pathToAidl = FakeSourcePath.of(stubFilesystem, "java/com/example/base/IWhateverService.aidl");
+    importPath = Paths.get("java/com/example/base").toString();
 
-    String pathToAidlExecutable = Paths.get("/usr/local/bin/aidl").toString();
-    String pathToFrameworkAidl =
+    pathToAidlExecutable = Paths.get("/usr/local/bin/aidl").toString();
+    pathToFrameworkAidl =
         Paths.get("/home/root/android/platforms/android-16/framework.aidl").toString();
-    AndroidPlatformTarget androidPlatformTarget =
+    androidPlatformTarget =
         AndroidPlatformTarget.of(
             "android",
             Paths.get(""),
@@ -81,23 +98,30 @@ public class GenAidlTest {
             Paths.get(""),
             Paths.get(""));
 
-    BuildTarget target =
+    target =
         BuildTargetFactory.newInstance(
             stubFilesystem.getRootPath(), "//java/com/example/base:IWhateverService");
-    BuildRuleParams params = TestBuildRuleParams.create();
-    SourcePathResolver pathResolver =
+    pathResolver =
         DefaultSourcePathResolver.from(new SourcePathRuleFinder(new TestBuildRuleResolver()));
-    GenAidl genAidlRule =
-        new GenAidl(
-            target,
-            stubFilesystem,
-            new ToolchainProviderBuilder()
-                .withToolchain(AndroidPlatformTarget.DEFAULT_NAME, androidPlatformTarget)
-                .build(),
-            params,
-            pathToAidl,
-            importPath);
+  }
 
+  private GenAidl createGenAidlRule(ImmutableSortedSet<SourcePath> aidlSourceDeps) {
+    BuildRuleParams params = TestBuildRuleParams.create();
+    return new GenAidl(
+        target,
+        stubFilesystem,
+        new ToolchainProviderBuilder()
+            .withToolchain(AndroidPlatformTarget.DEFAULT_NAME, androidPlatformTarget)
+            .build(),
+        params,
+        pathToAidl,
+        importPath,
+        aidlSourceDeps);
+  }
+
+  @Test
+  public void testSimpleGenAidlRule() {
+    GenAidl genAidlRule = createGenAidlRule(ImmutableSortedSet.of());
     GenAidlDescription description = new GenAidlDescription();
     assertEquals(
         Description.getBuildRuleType(GenAidlDescription.class),
@@ -135,5 +159,30 @@ public class GenAidlTest {
         aidlStep.getDescription(TestExecutionContext.newBuilder().build()));
 
     assertEquals(7, steps.size());
+  }
+
+  @Test
+  public void testTransitiveAidlDependenciesAffectTheRuleKey() throws IOException {
+    SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(new TestBuildRuleResolver());
+    SourcePathResolver pathResolver = DefaultSourcePathResolver.from(ruleFinder);
+    StackedFileHashCache hashCache =
+        StackedFileHashCache.createDefaultHashCaches(
+            stubFilesystem, FileHashCacheMode.LOADING_CACHE);
+    DefaultRuleKeyFactory factory =
+        new TestDefaultRuleKeyFactory(hashCache, pathResolver, ruleFinder);
+    stubFilesystem.touch(stubFilesystem.getRootPath().resolve(pathToAidl.getRelativePath()));
+
+    GenAidl genAidlRuleNoDeps = createGenAidlRule(ImmutableSortedSet.of());
+    RuleKey ruleKey = factory.build(genAidlRuleNoDeps);
+
+    // The rule key is different.
+    GenAidl genAidlRuleNoDeps2 = createGenAidlRule(ImmutableSortedSet.of(pathToAidl));
+    RuleKey ruleKey2 = factory.build(genAidlRuleNoDeps2);
+    assertNotEquals(ruleKey, ruleKey2);
+
+    // And the rule key is stable.
+    GenAidl genAidlRuleNoDeps3 = createGenAidlRule(ImmutableSortedSet.of(pathToAidl));
+    RuleKey ruleKey3 = factory.build(genAidlRuleNoDeps3);
+    assertEquals(ruleKey2, ruleKey3);
   }
 }
